--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,8 +2,8 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  background-color: gray;
-  color: #000;
+  background-color: #1a1a1a;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,7 +14,7 @@ body {
   max-width: 900px;
   width: 90%;
   padding: 20px;
-  background: cyan;
+  background: black;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   text-align: center;
@@ -56,4 +56,41 @@ h2 {
   height: auto;
   border-radius: 50%;
   margin-bottom: 10px;
+}
+
+.project-details {
+  margin-top: 20px;
+  text-align: left;
+}
+
+.project-details h3 {
+  font-size: 1.4em;
+  margin-bottom: 5px;
+  color: #0066cc;
+}
+
+.project-details p {
+  font-size: 1em;
+  margin-bottom: 10px;
+  color: #f0f0f0;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.gallery img {
+  max-width: 80%;
+  width: 80%;
+  max-width: 160px;
+  height: auto;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.3);
+  transition: transform 0.2s;
+}
+
+.gallery img:hover {
+  transform: scale(1.05);
 }
